# LibrosaCpp

./: .gitignore  CMakeLists.txt  README.md
LibrosaCpp/: librosa.h
librosa/: librosa.h
librosa/eigen3/unsupported/Eigen/: FFT
python/: librosa_test.py
test/: test.cc  wavreader.c  wavreader.h
vs2015/: all.sln  test.vcxproj  test.vcxproj.filters
